--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "angelomaragna/amazon-mws-orders",
     "type": "library",
+    "version": "0.1.0-dev",
     "description": "Amazon Marketplace Web Service Orders PHP Client Library (fork of Baptiste Meyer)",
     "keywords": ["amazon", "mws", "orders", "client", "api", "library"],
     "homepage": "",
@@ -10,10 +11,10 @@
           "name": "Baptiste Meyer",
           "email": "baptiste@les-tilleuls.coop"
         },
-	{
-	  "name": "Angelo Maragna",
-	  "email": "angelo.maragna@gmail.com"
-	}
+    	{
+    	  "name": "Angelo Maragna",
+    	  "email": "angelo.maragna@gmail.com"
+    	}
     ],
     "require": {
         "php": ">=5.2.8",
@@ -23,4 +24,5 @@
         "classmap": ["src/"]
     },
     "include-path": ["src/"]
+
 }
